--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,25 @@
-# Build and Release Folders
-bin-debug/
-bin-release/
-[Oo]bj/
-[Bb]in/
+# Node.js dependencies (if you use scripts)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Other files and folders
-.settings/
+# Python (if you use scripts)
+__pycache__/
+*.py[cod]
+*.pyo
 
-# Executables
-*.swf
-*.air
-*.ipa
-*.apk
+# OS files
+.DS_Store
+Thumbs.db
 
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
+# Logs
+*.log
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# GitHub Actions cache
+.github/workflows/*.tmp
