--- a/.github/workflows/label-sync.yml
+++ b/.github/workflows/label-sync.yml
@@ -4,7 +4,7 @@ name: Sync GitHub Labels
 on:
   push:
     paths:
-      - 'config/labels.json'   # only run when labels.json changes
+      - 'config/labels.yml'   # only run when labels.yml changes
       - '.github/workflows/label-sync.yml'
 
 jobs:
@@ -18,5 +18,5 @@ jobs:
         uses: crazy-max/ghaction-github-labeler@v4
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          config-file: config/labels.json
+          config-file: config/labels.yml
           skip-delete: true # prevents removing labels not in config
