--- a/.github/workflows/label-sync.yml
+++ b/.github/workflows/label-sync.yml
@@ -18,5 +18,5 @@ jobs:
         uses: crazy-max/ghaction-github-labeler@v4
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          config-file: config/labels.yml
+          yaml-file: .github/config/labels.yml
           skip-delete: true # prevents removing labels not in config
