--- a/config/labels.yml
+++ b/config/labels.yml
@@ -1,103 +1,103 @@
 - name: bug
-  color: d73a4a
+  color: "d73a4a"
   description: Something is broken or not working as intended
 
 - name: fixed
-  color: 0e8a16
+  color: "0e8a16"
   description: Issue has been resolved with a commit or patch
 
 - name: discussion
-  color: 5319e7
+  color: "5319e7"
   description: Open thread for architectural ideas or community input
 
 - name: enhancement
-  color: a2eeef
+  color: "a2eeef"
   description: Feature request or improvement beyond current scope
 
 - name: refactor
-  color: fbca04
+  color: "fbca04"
   description: Code restructuring without changing functionality
 
 - name: documentation
-  color: 0075ca
+  color: "0075ca"
   description: Docs, README, or comments need updates
 
 - name: question
-  color: d876e3
+  color: "d876e3"
   description: Clarification or inquiry; further information is requested
 
 - name: chore
-  color: ededed
+  color: "ededed"
   description: Small non-functional tasks like cleanup or minor maintenance
 
 - name: in progress
-  color: c2e0c6
+  color: "c2e0c6"
   description: Actively being worked on
 
 - name: blocked
-  color: b60205
+  color: "b60205"
   description: Cannot proceed until another issue/PR is resolved
 
 - name: needs review
-  color: fbca04
+  color: "fbca04"
   description: Awaiting code review or feedback
 
 - name: wontfix
-  color: ffffff
+  color: "ffffff"
   description: Decision made not to address this issue
 
 - name: duplicate
-  color: cccccc
+  color: "cccccc"
   description: Same as another issue
 
 - name: invalid
-  color: e4e669
+  color: "e4e669"
   description: Not a valid bug or request
 
 - name: "priority: critical"
-  color: b60205
+  color: "b60205"
   description: Highest urgency; must be addressed immediately
 
 - name: "priority: high"
-  color: b60205
+  color: "b60205"
   description: Must be addressed urgently
 
 - name: "priority: medium"
-  color: fbca04
+  color: "fbca04"
   description: Important but not urgent
 
 - name: "priority: low"
-  color: 0e8a16
+  color: "0e8a16"
   description: Nice-to-have, can wait
 
 - name: frontend
-  color: 1d76db
+  color: "1d76db"
   description: Frontend/UI related work
 
 - name: backend
-  color: 0052cc
+  color: "0052cc"
   description: Backend/API related work
 
 - name: security-advisory
-  color: b60205
+  color: "b60205"
   description: Security vulnerabilities and remediation tracking.
 
 - name: performance
-  color: fef2c0
+  color: "fef2c0"
   description: Speed or efficiency improvements
 
 - name: testing
-  color: 5319e7
+  color: "5319e7"
   description: Unit tests, integration tests, CI/CD coverage
 
 - name: maintenance
-  color: 0366d6
+  color: "0366d6"
   description: Dependency updates, version bumps, cleanup tasks
 
 - name: good first issue
-  color: 7057ff
+  color: "7057ff"
   description: Simple issue suitable for new contributors
 
 - name: help wanted
-  color: 008672
+  color: "008672"
   description: Extra attention is needed & contributions welcome
